chore: Added the boilerplate for public.css

--- a/Areas/Public/Views/Home/Main.cshtml
+++ b/Areas/Public/Views/Home/Main.cshtml
@@ -5,5 +5,14 @@
 <!-- HERO SECTION -->
 <div class="hero">
 
-    <h1>This is hero</h1>
+    <p>hjhsgssugu</p>
+    <p>hsshuh</p>
+
+    <button>Hellooooooo</button>
+
+
+    <span>s  nujubui</span>
+
+    <input type="">
+
 </div>
