--- a/Areas/Public/Views/Home/Main.cshtml
+++ b/Areas/Public/Views/Home/Main.cshtml
@@ -5,14 +5,6 @@
 <!-- HERO SECTION -->
 <div class="hero">
 
-    <p>hjhsgssugu</p>
-    <p>hsshuh</p>
-
-    <button>Hellooooooo</button>
-
-
-    <span>s  nujubui</span>
-
-    <input type="">
+    <p>This is hero</p>
 
 </div>
