feat: finished reports, also added a page-based initilization to confined js code for each page

--- a/Areas/Member/Views/Home/Employees.cshtml
+++ b/Areas/Member/Views/Home/Employees.cshtml
@@ -2,6 +2,7 @@
     // HEADER INFO
     ViewData["Title"] = "Employees";
     ViewData["Description"] = "Records and manage your employees personal information";
+    ViewData["Page"] = "employees";
 }
 
 <div class="employees">
