--- a/Areas/Member/Views/Home/FinancialTransaction.cshtml
+++ b/Areas/Member/Views/Home/FinancialTransaction.cshtml
@@ -2,6 +2,7 @@
     // HEADER INFO
     ViewData["Title"] = "Financial Transaction";
     ViewData["Description"] = "Records and monitor all financial transactions";
+    ViewData["Page"] = "financialTransaction";
 }
 
 <div class="financial-transaction">
