--- a/Areas/Member/Views/Home/Dashboard.cshtml
+++ b/Areas/Member/Views/Home/Dashboard.cshtml
@@ -2,6 +2,7 @@
     // HEADER INFO
     ViewData["Title"] = "Dashboard";
     ViewData["Description"] = "Overview of your financial performance";
+    ViewData["Page"] = "dashboard";
 }
 
 <div class="dashboard">
