feat: Business Registration modal finsihed

--- a/Areas/Member/Views/Home/Settings.cshtml
+++ b/Areas/Member/Views/Home/Settings.cshtml
@@ -16,7 +16,7 @@
 
             <div class="user-header">
                 <p class="settings-user-name">Migz Reyes</p>
-                <p class="settings-user-role">Backened Developer</p>
+                <p class="settings-user-role">Backend Developer</p>
             </div>
         </div>
 
