--- a/Areas/Member/Views/Home/Reports.cshtml
+++ b/Areas/Member/Views/Home/Reports.cshtml
@@ -33,7 +33,7 @@
 
             <div class="reports-cat-con input-con">
                 <p class="label">Category</p>
-                <div class="category-input">
+                <div class="category-input select-input">
                     <select name="category" id="category">
                         <option value="" disabled selected hidden>Select a category</option>
                         <option value="orders">Orders</option>
