--- a/Areas/Member/Views/Home/Reports.cshtml
+++ b/Areas/Member/Views/Home/Reports.cshtml
@@ -9,13 +9,13 @@
     <form action="">
         <div class="reports-trans-type-con input-con">
             <p class="label">Transaction Type</p>
-            <div class="reports-trans-type-radio-con">
-                <div class="reports-radio-input">
+            <div class="radio-con">
+                <div class="radio-input">
                     <input type="radio" id="income" value="income" name="transactionType" checked>
                     <label for="income">Income</label>
                 </div>
     
-                <div class="reports-radio-input">
+                <div class="radio-input">
                     <input type="radio" id="expense" value="expense" name="transactionType">
                     <label for="expense">Expense</label>
                 </div>
