chore: Made business registration modal use modular classes for lesser css code

--- a/Areas/Member/Views/Shared/_Main.cshtml
+++ b/Areas/Member/Views/Shared/_Main.cshtml
@@ -128,29 +128,29 @@
                 <p class="business-registration-head">Add your business</p>
             </div>
 
-            <div class="business-registration-body">
+            <div class="modal-body">
                 <form action="">
-                    <div class="business-registration-row">
-                        <p class="business-registration-label">Business Name</p>
-                        <div class="business-input">    
+                    <div class="modal-body-row">
+                        <p class="modal-input-label">Business Name</p>
+                        <div class="modal-input">    
                             <input type="text" name="businessName" placeholder="Enter your business name">
                         </div>
                     </div>
 
                     
-                    <div class="business-registration-row">
-                        <p class="business-registration-label">Industry</p>
-                        <div class="search-input">        
+                    <div class="modal-body-row">
+                        <p class="modal-input-label">Industry</p>
+                        <div class="modal-input">        
                             <input type="search" name="businessName" placeholder="e.g. Restaurant, Retail Service">
                         </div>
                     </div>
 
                     
-                    <div class="business-registration-row-con">
-                        <div class="business-registration-row">
-                            <p class="business-registration-label">Business Name</p>
-                            <div class="select-input">   
-                                <select name="country" id="country">
+                    <div class="modal-body-row-wrap wrapped">
+                        <div class="modal-body-row">
+                            <p class="modal-input-label">Business Name</p>
+                            <div class="modal-input select-input">   
+                                <select class="full-width" name="country" id="country">
                                     <option value="philippines">Philippines</option>
                                     <option value="hongKong">Hong Kong</option>
                                     <option value="singapore">Singapore</option>
@@ -162,16 +162,16 @@
                     </div>
 
                     
-                    <div class="business-registration-row">
-                        <p class="business-registration-label">Do you have employees?</p>
+                    <div class="modal-body-row">
+                        <p class="modal-input-label">Do you have employees?</p>
 
-                        <div class="business-registration-radio-con">
-                            <div class="radio-con">    
+                        <div class="radio-con">
+                            <div class="modal-radio-input">    
                                 <input type="radio" name="employees" id="yes" checked>
                                 <label for="yes">Yes</label>
                             </div>
 
-                            <div class="radio-con">    
+                            <div class="modal-radio-input">    
                                 <input type="radio" name="employees" id="no">
                                 <label for="no">No</label>
                             </div>
@@ -179,9 +179,9 @@
                     </div>
 
                     
-                    <div class="business-registration-btn-con">
-                        <button class="cancel">Cancel</button>
-                        <button type="submit" class="primary-button">Buy Now</button>
+                    <div class="modal-body-button-con">
+                        <button class="cancel full-width">Cancel</button>
+                        <button type="submit" class="primary-button full-width">Buy Now</button>
                     </div>
                 </form>
             </div>
@@ -304,7 +304,6 @@
                             </div>
                         </div>
                     </div>
-
                 
                     <div class="modal-body-row">
                         <p class="modal-input-label">Category</p>
