feat: Public site Home finished

--- a/Areas/Public/Views/Shared/_Main.cshtml
+++ b/Areas/Public/Views/Shared/_Main.cshtml
@@ -9,8 +9,23 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="nav-main">
+    <nav>
+        <div class="nav-list-con">
 
+            <div class="nav-logo">
+                <img src="~/brand/logo.svg">
+            </div>
+            <ul>
+                <li>Solutions</li>
+                <li>Services</li>
+                <li>Prices & Plans</li>
+            </ul>
+        </div>
+
+        <div class="nav-btn-con">
+            <button class="start-btn">Start Now</button>
+            <button class="login-btn">Log In</button>
+        </div>
     </nav>
 
     <!-- MAIN -->
